clean project, added validation publication, and added messages